# ReviewerCalls

./: .actrc  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  environment.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: new-call-candidate.yaml
.github/workflows/: deploy.yaml  discover.yaml  validate.yaml
data/: calls.yaml  conferences.yaml  rejected_urls.yaml
discover/: __init__.py  __main__.py  batch.py  config.py  constants.py  data.py  filters.py  github.py  http.py  main.py  parsers.py  pipeline.py  scoring.py  search.py  utils.py  validators.py
docs/: about.html  calls.json  conferences.json  index.html  robots.txt  script.js  sitemap.xml  style.css
tests/: __init__.py  conftest.py  test_batch_processor.py  test_build.py  test_constants.py  test_data_manager.py  test_date_extractor.py  test_discover.py  test_discovery_args.py  test_discovery_steps.py  test_github_issue.py  test_helpers.py  test_html_parser.py  test_integration.py  test_link_filter.py  test_link_scorer.py  test_scoring.py  test_url_utils.py  test_validate.py  test_validators.py
validate/: __init__.py  __main__.py  client.py  config.py  config.yaml.template  fetcher.py  prompt.py  validator.py
